[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/dice/dice_controller.gd" type="Script" id=1]
[ext_resource path="res://assets/dice/dice_texture.png" type="Texture" id=2]
[ext_resource path="res://assets/dice/check_area.tscn" type="PackedScene" id=3]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )

[sub_resource type="CubeMesh" id=1]
material = SubResource( 2 )

[node name="DiceController" type="Spatial"]
script = ExtResource( 1 )

[node name="Cube" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="FaceOne" type="Position3D" parent="Cube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="FaceTwo" type="Position3D" parent="Cube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="FaceThree" type="Position3D" parent="Cube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="FaceFour" type="Position3D" parent="Cube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="FaceFive" type="Position3D" parent="Cube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="FaceSix" type="Position3D" parent="Cube"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="LeftPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0 )

[node name="RightPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0 )

[node name="ForwardPivot" type="Position3D" parent="."]
transform = Transform( 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, -1, 1 )

[node name="BackPivot" type="Position3D" parent="."]
transform = Transform( 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, -1, -1 )

[node name="Tween" type="Tween" parent="."]

[node name="CheckAreaLeft" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0 )

[node name="CheckAreaRight" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )

[node name="CheckAreaForward" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )

[node name="CheckAreaBack" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )

[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
